--- a/client/src/components/css/Home.css
+++ b/client/src/components/css/Home.css
@@ -4,22 +4,15 @@
 body {
     font-family: '微軟正黑體';
 }
-/* #test_h3 {
-    font: 1em 微軟正黑體 ;
-} */
 
-#Intro .carousel-content1 {
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
+#Intro img{
+    height: 100vh;
 }
 
 #Intro .carousel-content {
     /* text-align: center; */
 
-    display: -webkit-box;
+    /* display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
@@ -31,31 +24,36 @@ body {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    position: absolute;
-    /* bottom: 0; */
-    /* top: 0; */
-    /* left: 0; */
-    /* right: 0; */
-
-    height: 80%;
+    position: absolute; */
+    height: 55%;
+   
 }
 
 #Intro h2 {
     color: #fff;
-    /* margin-bottom: 30px; */
     font-size: 48px;
     font-weight: 700;
 }
+
+#Intro h3 {
+    color: #fff;
+    align-items: center;
+    position: relative;
+    font-size: 48px;
+    font-weight: 700;
+}
+
 
 /*-------------------------
         About-Jumbotron
 -------------------------*/
 
 #about {
-    background-color: gold;
+    background-color: #FDFEFE;
     width: 100%;
-    /* height: auto; */
-    /* padding: 1000em inherit; */
+    /* height: 870px; */
+    height: 100vh;
+    /* padding: 10px; */
     min-height: 300px;
 }
 
@@ -63,13 +61,15 @@ body {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
+    margin-top: 4%;
 }
 
-#about h2 {
+#about .titlee h2 {
     color: #333;
-    font-weight: 500;
-    font-size: 24px;
+    font-weight: bolder;
+    font-size: 30px;
     text-align: center;
+    
     /* background-color: aqua; */
 }
 
@@ -87,8 +87,13 @@ body {
 	height: 1px;
 	width: 200px;
 	background: #333;
-	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+#about .body{
+    align-items: center;
+    margin-top: 20px;
 }
 
 #about .body h5 {
@@ -101,13 +106,13 @@ body {
     margin-left: 10px;
   }
   
-  #about .body p {
+#about .body p {
     line-height: 26px;
     text-align: left;
     margin-left: 10px;
   }
   
-  #about .body p:last-child {
+#about .body p:last-child {
     margin-bottom: 0;
   }
 
@@ -116,8 +121,9 @@ body {
         Image
 -------------------------*/
 #pall-img {
-    height: 350px;
+    height: 320px;
     overflow: hidden;
+    width: 100%;
     margin-top: -35px;
 }
 
@@ -127,17 +133,19 @@ body {
 #tool {
     margin-top: 20px;
     margin-bottom: 20px;
+    /* height: 70vh; */
     align-items: center;
     text-align: center;
-    background-color: beige;
+    background-color:  #FDFEFE;
 }
 
 #tool .tilte h2 {
     color: #333;
-    font-weight: 500;
+    font-weight: bolder;
     font-size: 36px;
     text-align: center;
     margin-bottom: 10px;
+    margin-top: 5%;
     /* background-color: aqua; */
 }
 
