--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+body {
+  font-family: '微軟正黑體';
+}
+
+
 .App {
   text-align: center;
 }
@@ -20,6 +25,21 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.form-horizontal {
+  align-content: center;
+  text-align: center;
+  margin-left: 20%;
+  margin-bottom: 10%;
+  width: 60%;
+  /* background-color: red; */
+}
+
+.btn {
+  width: 100px;
+  height: 40px;
+  margin-top: 5%;
 }
 
 @keyframes App-logo-spin {
