--- a/client/src/components/css/Home.css
+++ b/client/src/components/css/Home.css
@@ -153,7 +153,7 @@ body {
     align-items: center;
     position: absolute; */
     height: 55%;
-    background-image: none;
+    /* background-image: none; */
    
 }
 
