--- a/client/src/components/css/MyContract.css
+++ b/client/src/components/css/MyContract.css
@@ -6,7 +6,7 @@ body {
     margin-bottom: 8px;
   }
 
-.table {
+#table {
     align-content: center;
     text-align: center;
     align-items: center;
