--- a/client/src/components/css/MyContract.css
+++ b/client/src/components/css/MyContract.css
@@ -17,5 +17,12 @@ body {
     align-content: center;
     text-align: center;
     font-size: 24px;
-    background-color: black;
+}
+
+.btn {
+    
+}
+
+.tag {
+    font-size:  15px;
 }
