--- a/client/src/components/css/Claim.css
+++ b/client/src/components/css/Claim.css
@@ -1,3 +1,14 @@
 body {
     font-family: '微軟正黑體';
 }
+
+.container {
+    /* text-align: center;
+    align-content: center;
+    align-items: center; */
+    margin-top: 50px;
+}
+
+h3 {
+    text-align: center;
+}
