--- a/client/src/components/css/Contracts.css
+++ b/client/src/components/css/Contracts.css
@@ -9,9 +9,11 @@ p {
 
 h3 {
     font-weight: 400;
+    text-align: left；
     /* margin-bottom: -0.1%; */
     /* color: blue; */
 }
+
 .steps {
     margin-top: 100px;
 }
@@ -20,4 +22,8 @@ h3 {
     margin-top: -1%;
     border-width: 2px;
     font-weight: 900;
+}
+
+.collapse {
+    text-align: center;
 }
