--- a/client/src/components/css/Home.css
+++ b/client/src/components/css/Home.css
@@ -5,6 +5,9 @@ body {
     font-family: '微軟正黑體';
 }
 
+
+
+
 #Intro img{
     height: 100vh;
 }
@@ -41,6 +44,7 @@ body {
     position: relative;
     font-size: 48px;
     font-weight: 700;
+    text-align: center;
 }
 
 
@@ -131,30 +135,28 @@ body {
         manual-carousel
 -------------------------*/
 
-
-#manual img{
-    height: 100vh;
+#manual {
+    margin-bottom: 100px;
 }
 
-#manual .carousel-content {
-    /* text-align: center; */
+#manual .tilte h2 {
+    color: #333;
+    font-weight: bolder;
+    font-size: 36px;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 5%;
+    /* background-color: aqua; */
+}
 
-    /* display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    position: absolute; */
-    height: 55%;
-    /* background-image: none; */
-   
+#manual .heading-line {
+	margin:0 auto;
+	display: block;
+	height: 1px;
+	width: 200px;
+	background: #333;
+	margin-top: 10px;
+	margin-bottom: 20px;
 }
 
 #manual p {
@@ -167,9 +169,24 @@ body {
     color: #34495E;
     align-items: center;
     position: relative;
-    font-size: 48px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 100;
 }
+
+#manual .row{
+    margin-bottom: 20px;
+    /* text-align: center; */
+}
+
+#manual .manual-img{
+    text-align: center;
+}
+
+#manual .col-w{
+    margin-top: 50px;
+}
+
+
 
 
 
@@ -217,6 +234,7 @@ body {
 #tool h3 {
     margin-top: 5px;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 #tool .card_1 image{
