--- a/client/src/components/css/HowToUse.css
+++ b/client/src/components/css/HowToUse.css
@@ -1,4 +1,4 @@
-.ant-carousel .slick-slide {
+/* .ant-carousel .slick-slide {
     text-align: center;
     height: 500px;
     line-height: 500px;
@@ -8,4 +8,4 @@
   
   .ant-carousel .slick-slide h3 {
     color: #fff;
-  }
+  } */
