--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,34 @@ body {
   margin-top: 10%;
 }
 
+.btn_M {
+  font-size: 17px;
+  background-color: #48C9B0;
+  border-color:#18A488;
+}
+
+.btn_M:hover {
+  font-size: 17px;
+  background-color: #18A488;
+  border-color: #18A488;
+  /* color:#117864  ; */
+}
+
+.btn_C {
+  
+  font-size: 17px;
+  background-color:#F5B041;
+  border-color: #F99027;
+  margin-left: 30px;
+}
+
+.btn_C:hover  {
+  
+  font-size: 17px;
+  background-color:#F99027 ;
+  border-color: #F99027;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
