--- a/client/src/components/css/Home.css
+++ b/client/src/components/css/Home.css
@@ -5,9 +5,6 @@ body {
     font-family: '微軟正黑體';
 }
 
-
-
-
 #Intro img{
     height: 100vh;
 }
@@ -64,22 +61,16 @@ body {
    
     margin-top: 0%;
     opacity: 0.7;
-    width: 9%;
-    height: 6%; 
+    width: 120px;
+    height: 38px; 
 }
 
 #header .btn:hover {
     font-size: 18px;
-    /* background-color: #2E86C1; */
     border-color: #2E86C1;
     opacity: 1;
-    width: 10%;
-    height: 7%;
-}
-
-#header .right {
-    /* margin-left: 8px; */
-    
+    width: 130px;
+    height: 40px;
 }
 
 #header .left {
@@ -95,7 +86,6 @@ body {
 }
 
 .App {
-    /* font-family: sans-serif;  */
     text-align: center;
     margin-top: 200px;
 }
